Add docker pull functionality to the Makefile.
This lets a user add their own list of docker base images into the
vagrant vm base image without needing to rewrite code. Simply make the
changes in the versions/*.sh file that you're using to build.

XXX: this doesn't work yet, but when it does, I can amend to remove this
line and add in this one:
Special thanks to rwmjones, for constantly having the magic solution.

--- a/centos-7.0/Makefile
+++ b/centos-7.0/Makefile
@@ -84,6 +84,10 @@ $(OUTPUT)/builder.img: files/*
 	--run-command 'yum install -y /root/puppetlabs-release-el-7.noarch.rpm && rm -f /root/puppetlabs-release-el-7.noarch.rpm' \
 	--run-command 'yum install -y puppet' \
 	--run-command 'yum install -y docker' \
+	--run-command 'systemctl enable docker' \
+	--upload files/docker.sh:/root/docker.sh \
+	--run-command '/usr/bin/docker -d -H fd:// &' \
+	--run-command '/root/dock.sh pull $(IMAGES) && rm /root/docker.sh' \
 	--upload files/yum.sh:/root/yum.sh \
 	--run-command '/root/yum.sh install $(EXTRAS) && rm /root/yum.sh' \
 	--run-command 'yum update -y' \
